feat: improve apis (#7)
* feat: phase 1 -> bug fixes

* feat: phase 1 -> bug fixes

* feat: phase 2 -> fix API asymmetry

* feat: phase 3 -> API enhancements

* feat: phase 5 -> qol enhancements

* feat: phase 4 -> enhanced mapping

* feat: phase 4 -> enhanced mapping

* feat: update docs