@@ -5,8 +5,6 @@ import org.jspecify.annotations.Nullable;
 import software.amazon.awssdk.enhanced.dynamodb.Document;
 import software.amazon.awssdk.enhanced.dynamodb.MappedTableResource;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -28,7 +26,7 @@ public class TransactGetResults<T extends MappedTableResource<?>> {
      * @param tables    the table references (in builder order) for type-safe item extraction
      */
     public TransactGetResults(@NonNull List<Document> documents, @NonNull List<T> tables) {
-        this.documents = Collections.unmodifiableList(new ArrayList<>(documents));
+        this.documents = List.copyOf(documents);
         this.tables = List.copyOf(tables);
     }
 
